# baby-daily-logger-agent-skill

./: .gitignore  README.md  SCHEMA.md  SKILL.md  pyproject.toml
baby_daily_logger/: __init__.py  cli.py
baby_daily_logger/adapters/: __init__.py  simple_tools.py
baby_daily_logger/core/: __init__.py  common.py  parser.py  pending.py  schema.py  storage.py  summary.py  visualization.py
baby_everythings_agent/: __init__.py  cli.py  plotting.py
baby_everythings_agent/adapters/: __init__.py  simple_tools.py
baby_everythings_agent/core/: __init__.py  common.py  parser.py  pending.py  schema.py  storage.py  summary.py  visualization.py
docs/: agent-integration.md  privacy.md  schema.md
examples/: conversation.md  demo_baby_data.json
tests/: test_core.py
