[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "baby-everythings-agent-skill"
version = "0.1.0"
description = "Natural-language baby care logging with BabyEveryThings-compatible JSON import/export."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Jingrui Yu"}]
keywords = ["agent", "baby", "care", "BabyEveryThings", "natural-language", "skill"]
dependencies = []
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Utilities",
]

[project.optional-dependencies]
visualization = ["matplotlib>=3.8"]
dev = ["pytest>=8"]

[project.scripts]
baby-care-agent = "baby_everythings_agent.cli:main"

[tool.setuptools.packages.find]
include = ["baby_everythings_agent*"]
