[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "baby-daily-logger-agent-skill"
version = "0.1.0"
description = "Natural-language baby daily logging compatible with Washitong WeChat mini-program JSON."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Jingrui Yu"}]
keywords = ["agent", "baby", "daily-log", "washitong", "natural-language", "skill"]
dependencies = []
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Utilities",
]

[project.optional-dependencies]
visualization = ["matplotlib>=3.8"]

[project.scripts]
baby-daily-logger = "baby_daily_logger.cli:main"

[tool.setuptools.packages.find]
include = ["baby_daily_logger*"]
